--- a/css/styles.css
+++ b/css/styles.css
@@ -3447,7 +3447,7 @@ input[type="button"].btn--primary:focus {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/CV.jpg);
+    background-image: url(../images/CV2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
