--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,16 @@
     --vspace-4    : calc(4 * var(--space));
     --vspace-4_5  : calc(4.5 * var(--space));
     --vspace-5    : calc(5 * var(--space));
+	--vspace-5_5    : calc(5.5 * var(--space));
+	--vspace-6    : calc(6 * var(--space));
+	--vspace-6_5    : calc(6.5 * var(--space));
+	--vspace-7    : calc(7 * var(--space));
+	--vspace-7_5    : calc(7.5 * var(--space));
+	--vspace-8    : calc(8 * var(--space));
+	--vspace-8_5    : calc(8.5 * var(--space));
+	--vspace-9    : calc(9 * var(--space));
+	--vspace-9_5    : calc(9.5 * var(--space));
+	--vspace-10    : calc(10 * var(--space));
 
     /* type scale
      * ratio 1:2 | base: 18px
@@ -3438,6 +3448,15 @@ input[type="button"].btn--primary:focus {
     position: relative;
 }
 
+.s-hero__pic {
+	-ms-flex-align: center;
+    -webkit-box-align: center;
+    width: var(--vspace-9);
+    height: var(--vspace-9);
+    border: 0.2rem solid rgba(255, 255, 255, 0.02);
+    border-radius: 50%;
+}
+
 .s-hero__bg {
     display: block;
     position: absolute;
@@ -3490,13 +3509,13 @@ input[type="button"].btn--primary:focus {
     -webkit-box-align: center;
     align-items: center;
     text-align: center;
-    padding-top: 16vh;
+    padding-top: 0vh;
     padding-bottom: 12vh;
     position: relative;
 }
 
 .s-hero__content h1 {
-    font-size: 9.8rem;
+    font-size: 7.5rem;
     font-weight: 600;
     letter-spacing: -.04em;
     line-height: 1;
@@ -3672,9 +3691,31 @@ input[type="button"].btn--primary:focus {
  * responsive:
  * hero
  * ------------------------------------------------------------------- */
+ @media screen and (max-width: 1200px) {
+    .s-hero__pic {
+        width: var(--vspace-4_5);
+        height: var(--vspace-4_5);
+        border-width: 1.4rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .s-hero__pic {
+        width: var(--vspace-4);
+        height: var(--vspace-4);
+        border-width: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .s-hero__pic {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 1600px) {
     .s-hero__content h1 {
-        font-size: 9.4rem;
+        font-size: 7.1rem;
     }
     .s-hero__content h3 {
         font-size: 2.2rem;
@@ -3683,7 +3724,7 @@ input[type="button"].btn--primary:focus {
 
 @media screen and (max-width: 1400px) {
     .s-hero__content h1 {
-        font-size: 8.8rem;
+        font-size: 6.5rem;
     }
     .s-hero__content h3 {
         font-size: 2rem;
@@ -3693,7 +3734,7 @@ input[type="button"].btn--primary:focus {
 
 @media screen and (max-width: 1200px) {
     .s-hero__content h1 {
-        font-size: 8.4rem;
+        font-size: 6.1rem;
     }
     .s-hero__content h3 {
         font-size: 1.9rem;
@@ -3702,7 +3743,7 @@ input[type="button"].btn--primary:focus {
 
 @media screen and (max-width: 900px) {
     .s-hero__content h1 {
-        font-size: 7.6rem;
+        font-size: 5.3rem;
     }
     .s-hero__content h3 {
         font-size: 1.8rem;
@@ -3717,7 +3758,7 @@ input[type="button"].btn--primary:focus {
         padding-top: 12vh;
     }
     .s-hero__content h1 {
-        font-size: 6.8rem;
+        font-size: 4.5rem;
     }
     .s-hero__content h3 {
         max-width: 600px;
@@ -3726,13 +3767,13 @@ input[type="button"].btn--primary:focus {
 
 @media screen and (max-width: 700px) {
     .s-hero__content h1 {
-        font-size: 6.2rem;
+        font-size: 3.9rem;
     }
 }
 
 @media screen and (max-width: 600px) {
     .s-hero__content h1 {
-        font-size: 5.8rem;
+        font-size: 3.5rem;
     }
     .s-hero__content-social {
         font-size: 2.2rem;
@@ -3741,13 +3782,13 @@ input[type="button"].btn--primary:focus {
 
 @media screen and (max-width: 500px) {
     .s-hero__content h1 {
-        font-size: 5.2rem;
+        font-size: 2.9rem;
     }
 }
 
 @media screen and (max-width: 400px) {
     .s-hero__content h1 {
-        font-size: 4.8rem;
+        font-size: 2.5rem;
     }
     .s-hero__content h3 {
         font-size: 1.7rem;
@@ -3834,25 +3875,10 @@ input[type="button"].btn--primary:focus {
     fill: white;
 }
 
-/*
-.s-about__content h3 {
-    font-family: var(--font-2);
-    font-weight: 400;
-    font-size: 2.4rem;
-    line-height: 1.667;
-    color: rgba(255, 255, 255, 0.5);
-    margin-top: var(--vspace-0_5);
-    margin-right: auto;
-    margin-left: auto;
-    padding-bottom: var(--vspace-1);
-    max-width: 800px;
-    position: relative;
-}
-
-.s-about__content h3 span, .s-about__content h3 a {
+.s-about__content p span{
     color: white;
 }
-*/
+
 
 /* ------------------------------------------------------------------- 
  * responsive:
