--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,8 @@
 
     /* vertical spacing 
      */
+    --vspace-0_0: calc(0 * var(--space));
+    --vspace-0_025: calc(0.025 * var(--space));
     --vspace-0_125: calc(0.125 * var(--space));
     --vspace-0_25 : calc(0.25 * var(--space));
     --vspace-0_5  : calc(0.5 * var(--space));
@@ -3939,7 +3941,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-resume {
     background-color: white;
-    padding-top: calc(2 * var(--space));
+    padding-top: calc(3 * var(--space));
     padding-bottom: var(--vspace-4);
 }
 
@@ -3959,15 +3961,16 @@ input[type="button"].btn--primary:focus {
  * ## resume block
  * ------------------------------------------------------------------- */
 .resume-block {
-    margin-bottom: var(--vspace-1_75);
+    margin-bottom: var(--vspace-0_875);
+    font-size: calc(var(--text-size)*0.7778);
 }
 
 .resume-block h4 {
-    line-height: 1.080;
+    line-height: calc(var(--text-size)*1.45); /*1.080; */
     margin-top: 0;
     margin-bottom: var(--vspace-0_25);
+    font-size: calc(var(--text-size)*1.2);
 }
-
 
 .resume-block h1 {
     margin-top: 0;
@@ -3985,21 +3988,24 @@ input[type="button"].btn--primary:focus {
 
 .resume-block__header-meta {
     font-family: var(--font-2);
-    font-size: calc(var(--text-size) * 1.1111);
+    font-size: calc(var(--text-size)); /*calc(var(--text-size) * 1.1111);*/
+    line-height: calc(var(--text-size)*1.25);
     font-style: italic;
     margin-top: -.4rem;
-    margin-bottom: var(--vspace-0_75);
+    margin-bottom: var(--vspace-0_125);
 }
 
 .resume-block__header-meta span:first-child {
     margin-right: .6rem;
+    /* font-size: var(--text-sm); */
 }
 
 .resume-block__header-date {
     display: inline-block;
     font-family: var(--font-1);
-    font-size: calc(var(--text-size) * 0.8889);
-    font-size: var(--text-sm);
+    /* font-size: calc(var(--text-size) * 0.8889); */
+    font-size: calc(var(--text-sm)*0.7778);
+    line-height: calc(var(--text-sm)*1.0278);
     font-style: normal;
     text-transform: uppercase;
     letter-spacing: .12em;
@@ -4007,6 +4013,25 @@ input[type="button"].btn--primary:focus {
 }
 
 .resume-block__header-date::before {
+    content: "\2022";
+    color: var(--color-text);
+    margin-right: .2rem;
+}
+
+.resume-block__header-utadate {
+    margin-left: 4rem;
+    display: inline-block;
+    font-family: var(--font-1);
+    /* font-size: calc(var(--text-size) * 0.8889); */
+    font-size: calc(var(--text-sm)*0.7778);
+    line-height: calc(var(--text-sm)*1.0278);
+    font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: .12em;
+    color: var(--color-text-light);
+}
+
+.resume-block__header-utadate::before {
     content: "\2022";
     color: var(--color-text);
     margin-right: .2rem;
@@ -4032,7 +4057,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: calc(6 * var(--space));
+    padding-top: calc(4 * var(--space));
     padding-bottom: var(--vspace-5);
 }
 
@@ -4050,8 +4075,10 @@ input[type="button"].btn--primary:focus {
 .folio-list {
     max-width: 1180px;
     margin-top: var(--vspace-2_5);
-    text-align: center;
-    font-size: calc(var(--text-size) * 1.3);
+    /* margin-left: 0rem; */
+    text-align: left;
+    font-size: calc(var(--text-size) * 1);
+    line-height: calc(var(--text-size) * 1.25);
 }
 
 .folio-item__thumb {
@@ -4114,6 +4141,24 @@ input[type="button"].btn--primary:focus {
     transition: all, .5s;
 }
 
+.folio-item h4 {
+    /* margin-top: var(--vspace-0_125); */
+    text-align: left;
+    font-size: calc(var(--text-size) * 0.75);
+    font-style: bold;
+    margin-top: -.4rem;
+    margin-bottom: -0.4rem;
+}
+
+.folio-item span {
+    /* margin-top: var(--vspace-0_125); */
+    text-align: left;
+    font-size: calc(var(--text-size) * 0.75);
+    font-style: italic;
+    margin-top: -.4rem;
+    margin-bottom: -0.4rem;
+}
+
 /**.folio-item tut {
     text-align: center;
 }*/
@@ -4152,6 +4197,10 @@ input[type="button"].btn--primary:focus {
 .modal-popup img {
     padding-top: 5rem;
     margin-bottom: var(--vspace-0_125);
+    max-height: 300px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .modal-popup h5 {
